feature: updated swagger
